# telemetry-rs

./: .gitignore  Cargo.toml  build.rs  file.tree  log_20250523_224205.txt  log_20250523_225534.txt  log_20250523_225730.txt  log_20250524_021758.txt  log_20250524_021835.txt  my.patch  telemetry.dbc  test_prioritization.py
src/: can.rs  can_interface.rs  gui.rs  layout.rs  logger.rs  main.rs  packet.options  packet.proto  proto.rs  serial.rs  telemetry.rs
src/gui_modules/: battery_box.rs  bms_info_box.rs  bps_box.rs  fault_panel.rs  layout.rs  mod.rs  modem_status.rs  mppt_info_box.rs  radio_status.rs  serial_panel.rs  status_box.rs  types.rs
